<resources>
    <string name="app_name">GoalGeta</string>

    <!-- String for Login and MainActivity -->
    <string name="login">LOGIN</string>
    <string name="signup">SIGN UP</string>
    <string name="user">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="forgot_pass">FORGOT PASSWORD?</string>
    <string name="no_acct">NO ACCOUNT?</string>
    <string name="signin">SIGN IN</string>
    <string name="title_activity_login">Sign in</string>
    <string name="motto">motto</string>
    <string name="title_activity_login2">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to signup -->
    <string name="acct_exist">ALREADY HAVE AN ACCOUNT?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
